--- a/frontend/src/components/schedule/searchItem/SearchItem.scss
+++ b/frontend/src/components/schedule/searchItem/SearchItem.scss
@@ -2,12 +2,15 @@
   padding: 0.5rem;
   background: #288d7f;
   color: white;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+
   width: 100%;
   margin: 5px auto;
   max-height: 100%;
   font-size: 1rem;
-  text-align: center;
   border-radius: 5px;
   transition: background-color 0.15s ease-in-out;
   cursor: pointer;
@@ -37,31 +40,41 @@
     background-color: #54a1e7;
   }
 
+  &__title,
+  &__header,
+  &__type,
+  &__word {
+    margin: 0;
+    font-size: 1rem;
+    color: white;
+    overflow-wrap: break-word;
+  }
+
+  &__title,
+  &__header,
+  &__type {
+    font-weight: bold;
+  }
+
+  &__title {
+    text-align: center;
+    margin: 0.5rem 0;
+  }
+
+  &__type {
+    font-size: 1.1rem;
+  }
+
   &:hover {
     background-color: white;
     border: 1px solid black;
     box-shadow: 1px 2px 5px rgba($color: #000000, $alpha: 0.4);
 
-    .search-item__title {
+    .search-item__title,
+    .search-item__type,
+    .search-item__word,
+    .search-item__header {
       color: black;
     }
-    .search-item__type {
-      color: black;
-    }
-  }
-
-  &__title,
-  &__type {
-    color: white;
-    text-align: left;
-    margin: 0;
-  }
-
-  &__type {
-    color: white;
-    text-align: left;
-    margin-top: 3rem;
-    font-size: 1.1rem;
-    font-weight: 100;
   }
 }
